Commit: 6f8d914
Author: Rowan Clark
Thu Dec 1 12:45:47 2022
Commit subject: 
note on changelog script and proposed system requirements

Commit: 976d517
Author: Rowan Clark
Thu Dec 1 12:39:19 2022
Commit subject: 
add ToC and contributors to readme

Commit: bf15068
Author: Rowan Clark
Thu Dec 1 12:19:08 2022
Commit subject: 
add gitignore

Commit: 5f063c0
Author: Rowan Clark
Thu Dec 1 11:33:54 2022
Commit subject: 
chore: asp and mariadb

Commit: 7cc8805
Author: Rowan Clark
Thu Dec 1 11:27:35 2022
Commit subject: 
chore: init asp project

Commit: b0404e5
Author: Rowan Clark
Thu Dec 1 11:12:34 2022
Commit subject: 
chore: add resources

Commit: 10e0a17
Author: Rowan Clark
Thu Dec 1 11:05:57 2022
Commit subject: 
chore: mv changellog to non markdown to not break formatting

Commit: 407a40a
Author: Christopher Boczko
Thu Dec 1 10:57:13 2022
Commit subject: 
added directories

Commit: e09894a
Author: Rowan Clark
Thu Dec 1 11:00:55 2022
Commit subject: 
chore: add changelog and script

Commit: 432420f
Author: Rowan Clark
Thu Dec 1 10:55:41 2022
Commit subject: 
chore: update readme

Commit: 752ea19
Author: GitHub
Thu Dec 1 10:40:00 2022
Commit subject: 
Initial commit
